Remove Community Name

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
         <section class="hero">
             <div class="hero-text">
-                <h4> Nexus RolePlay Community</h4>
+                <h4> My Community Name</h4>
                 <h1> Welcome</h1>
-                <p> אנחנו שמחים שהגעתם לאתר שלנו , אנחנו מברכים אתכם על הצטרפותכם למשפחה שלנו , מחכים לכם בשרתי המשחק ובשיחות הדיסקורד</p>
+                <p>Welcome To Community Website , Join To Discord</p>
                 <a href="#">דיסקורד</a>
             </div>
 
